<resources>
    <string name="app_name">CAG App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="touch_screen_to_start">Touch Screen to Start</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="power_on">power on</string>
    <string name="power_off">power off</string>
    <string name="volume">volume</string>
    <string name="please_wait">Please wait ...</string>
    <string name="led_indicator">LED indicator</string>
    <string name="connection_indicator_of_switch">Connection indicator of Switch</string>
    <string name="connection_indicator_of_TV">"TV connection indicator "</string>
    <string name="close">Close</string>
    <string name="exit_app">Exit App</string>
    <string name="front">front</string>
    <string name="side">side</string>
    <string name="select_source">Select source</string>
    <string name="usb_c">USB-C</string>
    <string name="usb_c_source_button">USB-C Source button</string>
    <string name="wireless_share_source_button">Wireless Share Source button</string>
    <string name="volume_up_icon">Volume Up icon</string>
    <string name="turn_display_off">Turn display off</string>
    <string name="mute">Mute</string>
    <string name="usb_c1">USB-C 1</string>
    <string name="usb_c2">USB-C 2</string>
    <string name="wireless_share">Wireless Share</string>
    <string name="hall_2">HALL 2</string>
    <string name="choose_input">Choose input</string>
    <string name="master_panel">Master Panel</string>
    <string name="changi_airport_group">Changi Airport Group</string>
    <string name="hall_1">HALL 1</string>
    <string name="cag_ops_room">CAG OPS Room</string>
    <string name="usb_c3">USB-C 3</string>
    <string name="wireless_share_1">Wireless Share 1</string>
    <string name="wireless_share_2">Wireless Share 2</string>
    <string name="apple">Apple TV</string>
    <string name="appletv">Apple TV</string>
    <string name="starhub">Starhub</string>
    <string name="cctv">CCTV</string>
    <string name="choose_output">Choose output</string>
    <string name="hall_1_led_wall_in_1">Hall 1 LED Wall IN 1</string>
    <string name="hall_1_led_wall_in_2">Hall 1 LED Wall IN 2</string>
    <string name="hall_2_led_wall_in_1">Hall 2 LED Wall IN 1</string>
    <string name="video">VIDEO</string>
    <string name="control">CONTROL</string>
    <string name="tv_power">TV Power</string>
</resources>